[[bin]]
name = "day01"

[[bin]]
name = "day02"

[[bin]]
name = "day03"

[[bin]]
name = "day04"

[[bin]]
name = "day05"

[[bin]]
name = "day06"

[[bin]]
name = "day07"

[[bin]]
name = "day08"

[[bin]]
name = "day09"

[[bin]]
name = "day10"

[[bin]]
name = "day11"

[[bin]]
name = "day12"

[[bin]]
name = "day13"

[package]
name = "aor2020"
version = "0.1.0"
authors = ["James Youngman <james@youngman.org>"]

[dependencies]
regex = "1"
lazy_static = "1.3.0"
itertools = ""
