[[bin]]
name = "day01"

[[bin]]
name = "day02"

[[bin]]
name = "day03"

[[bin]]
name = "day04"

[[bin]]
name = "day05"

[[bin]]
name = "day06"

[[bin]]
name = "day07"

[[bin]]
name = "day08"

[[bin]]
name = "day09"

[[bin]]
name = "day10"

[[bin]]
name = "day11"

[[bin]]
name = "day12"

[[bin]]
name = "day13"

[[bin]]
name = "day14"

[[bin]]
name = "day15"

[[bin]]
name = "day16"

[[bin]]
name = "day17"

[[bin]]
name = "day18"

[[bin]]
name = "day19"

[[bin]]
name = "day20"

[[bin]]
name = "day21"

[[bin]]
name = "day22"

[[bin]]
name = "day23"

[[bin]]
name = "day24"

[package]
name = "aor2020"
version = "0.1.0"
authors = ["James Youngman <james@youngman.org>"]

[dependencies]
regex = ">= 1.0.0"
lazy_static = ">=1.4.0"
itertools = ">= 0.10"
# ndarray 0.14.0 requires rust 1.42 and I'm currently using 1.41.1.
ndarray = "<0.14.0"
pretty_env_logger = "0.4.0"
log = "0.4.11"
thiserror = "1.0"